Import of NEKOKAK/DBIx-Skinny-Mixin-DBHResolver-0.02 from CPAN.
gitpan-cpan-distribution: DBIx-Skinny-Mixin-DBHResolver
gitpan-cpan-version:      0.02
gitpan-cpan-path:         NEKOKAK/DBIx-Skinny-Mixin-DBHResolver-0.02.tar.gz
gitpan-cpan-author:       NEKOKAK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension DBIx::Skinny::Mixin::DBHResolver
 
+0.02
+   2010-07-05
+        - FIXED: Makefile.PL
+        - MOD  : update pod
+
 0.01
    2010-06-29
         - original version
