Import of NEKOKAK/DBIx-Skinny-Mixin-DBHResolver-0.03 from CPAN.
gitpan-cpan-distribution: DBIx-Skinny-Mixin-DBHResolver
gitpan-cpan-version:      0.03
gitpan-cpan-path:         NEKOKAK/DBIx-Skinny-Mixin-DBHResolver-0.03.tar.gz
gitpan-cpan-author:       NEKOKAK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension DBIx::Skinny::Mixin::DBHResolver
 
+0.03
+   2010-07-09
+        - FIXED: Makefile.PL
+
 0.02
    2010-07-05
         - FIXED: Makefile.PL
