Import of NEKOKAK/DBIx-Skinny-Mixin-DBHResolver-0.04 from CPAN.
gitpan-cpan-distribution: DBIx-Skinny-Mixin-DBHResolver
gitpan-cpan-version:      0.04
gitpan-cpan-path:         NEKOKAK/DBIx-Skinny-Mixin-DBHResolver-0.04.tar.gz
gitpan-cpan-author:       NEKOKAK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension DBIx::Skinny::Mixin::DBHResolver
 
+0.04
+   2010-07-15
+        - FIXED: test require DBD::SQLite.
 0.03
    2010-07-09
         - FIXED: Makefile.PL
